# mycv

./: .gitignore  CMakeLists.txt  mycv.cp38-win_amd64.pyd  readme.md  test.py
.ipynb_checkpoints/: solve-checkpoint.ipynb
src/: mycv.cpp  start.sh  test.cpp
